--- a/stvsystem/stvsystem/stvsystem.csproj
+++ b/stvsystem/stvsystem/stvsystem.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core" Version="2017.3.1018" />
   </ItemGroup>
 
