--- a/stvsystem/stvsystem/appsettings.json
+++ b/stvsystem/stvsystem/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.\\SQL2014;Database=stvsystemDB;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
