--- a/stvsystem/stvsystem.UnitTests/stvsystem.UnitTests.csproj
+++ b/stvsystem/stvsystem.UnitTests/stvsystem.UnitTests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\stvsystem.Data\stvsystem.Data.csproj" />
+  </ItemGroup>
+
 </Project>
