--- a/stvsystem/stvsystem/bundleconfig.json
+++ b/stvsystem/stvsystem/bundleconfig.json
@@ -8,8 +8,8 @@
       "wwwroot/css/eLColsultation.css",
       "wwwroot/css/font-awesome.css",
       "wwwroot/css/simple-line-icons.css",
-      "wwwroot/css/site.css",
-      "wwwroot/css/style.css"
+      "wwwroot/css/style.css",
+      "wwwroot/css/site.css"
     ]
   },
   {
